# Core-Caven32

./: .gitignore  .gitmodules  Cavendish资源分配手册.docx  MCU.emmx  README.md
AT32F4xx/: readme.md
BS-example/: 使用前先看这个！.doc
BS-example/STM32_OLED+DS18B20/: readme.md
Caven-V3.14/: MCU.md  README.md
Caven-V3.14-M0+/AIR001/: README.md
Caven-V3.14-M3/: README.md  ~$vendish资源分配手册.docx
Caven-V3.14-M3 - 小白纯净版/: readme.md
Caven-V3.14-M4/: Cavendish资源分配手册.docx  ~$vendish资源分配手册.docx  新的分配.txt
Caven-V3.14-RISC-V/: README.md
Caven-V31.4-M4/: README.md
DAP-Link/: tip.md
DIY-Demo/OPEN_Bird_Final/bird_gui/: .cproject  CMakeLists.txt  README.md  asdasd.h  lv_conf.h  lv_drv_conf.h
DIY-Demo/OPEN_Bird_Final/bird_gui/lv_drivers/: README.md
DIY-Demo/OPEN_Bird_Final/bird_gui/lvgl/src/draw/sw/: lv_draw_sw_letter.c
DIY-Demo/OPEN_Bird_Final/bird_gui/lvgl/src/misc/: lv_mem.h
DIY-Demo/OPEN_Bird_Final/bird_gui/ui/: filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
DIY-Demo/OPEN_Bird_Final/bird_gui/ui/components/: ui_comp_hook.c
DIY-Demo/OPEN_Bird_Final/bird_gui/ui/screens/: ui_cone.c
Keil_Pack/: ArteryTek.AT32F403A_407_DFP.2.1.0.pack  ArteryTek.AT32F403_DFP.2.0.3.pack  ArteryTek.AT32F413_DFP.2.0.6.pack  ArteryTek.AT32F415_DFP.2.0.6.pack  ArteryTek.AT32F421_DFP.2.0.7.pack  ArteryTek.AT32F425_DFP.2.0.4.pack  ArteryTek.AT32F435_437_DFP.2.1.0.pack  ArteryTek.AT32WB415_DFP.2.0.2.pack  GigaDevice.GD32F4xx_DFP.3.0.0.pack
MCU_LIB-Cloud-/: .gitmodules  Base_ADC.md  Base_Flash.md  Base_SPI.md  Base_Sys_Tick.md  Base_UART.md  Chips_IC.md  README.md
(+5384 files in other folders)
